--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   body,
   html,
   #root {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif !important;
   }
 
   body {
@@ -21,7 +21,7 @@
   h2,
   h3,
   .timeline-title {
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Great Vibes', cursive !important;
   }
 
   * {
