--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,8 @@
 
   body,
   html,
-  #root,
-  * {
+  #root {
     font-family: 'Poppins', sans-serif !important;
-  }
-
-  h1,
-  h2,
-  h3,
-  .timeline-title,
-  *[class*="title"] {
-    font-family: 'Great Vibes', cursive !important;
   }
 
   body {
@@ -24,6 +15,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overscroll-behavior: none;
+  }
+
+  h1,
+  h2,
+  h3,
+  .timeline-title {
+    font-family: 'Great Vibes', cursive !important;
   }
 
   * {
